book-client/book-client-gitops/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-hash: sha256
    nginx.ingress.kubernetes.io/session-cookie-name: route
  name: book-client-ing
spec:
  ingressClassName: nginx
  rules:
  - host: dev-inje-msa-demo.cone-chain.com
    http:
      paths:
      - backend:
          service:
            name: book-client-svc
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - dev-inje-msa-demo.cone-chain.com
    secretName: secret-tls
